# ChangeLog for media-gfx/actdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*actdiag-0.1.8 (19 Oct 2011)

  19 Oct 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.8.ebuild:
  Version bump [469].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -actdiag-0.1.5.ebuild,
  actdiag-0.1.7.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.7.ebuild:
  Keyworded amd64.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.5.ebuild:
  Keyworded x86.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.5.ebuild:
  Keyworded amd64.

*actdiag-0.1.7 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.7.ebuild,
  metadata.xml:
  Version bump [418].

  02 Jul 2011; James Rowe <jnrowe@gmail.com> actdiag-0.1.5.ebuild:
  Keyworded ~x86.

*actdiag-0.1.5 (01 Jul 2011)

  01 Jul 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.5.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [364].
