@@ -3,15 +3,17 @@ Hash: SHA512
 
 DIST actdiag-0.1.7.tar.gz 21092 RMD160 958561cc9f1782d293e1e32a53a0a8570bd06c6b SHA1 8285c05b0d26b8ef70d77d85513c171c1fdc2187 SHA256 80fd39d1ee3704162eb27e6373447030687951002e9c1b1917642d78028b97af
 DIST actdiag-0.1.8.tar.gz 21201 RMD160 5669b0590b21376197689893887db7dc9dad3c22 SHA1 ccb54b2d62f68ddfcf9d527608a5c7c381d5809c SHA256 f5442c562a87a1008c9d1ca1ef13a1d758c742be0afc6ce720979018d2ac951d
+DIST actdiag-0.2.0.tar.gz 22056 RMD160 fac65fef9a1a6cc3f477249cb24c6a4207fe39e8 SHA1 2ffac38966f3e6b7dca600ae663e95a6477b36b4 SHA256 d08a95901cc8cd4e6fee9a007b2f20b9d40220d479ecff491c555659127bd790
 EBUILD actdiag-0.1.7.ebuild 971 RMD160 7c62891e4c6178c7ea2246a2f7741377ce1f840b SHA1 d9c6d984249073106d597e865771d01be4319442 SHA256 70ad43c1c8c62627a430f968a1357bf264e4306dddf0487126f3be31c4dc6f3e
 EBUILD actdiag-0.1.8.ebuild 973 RMD160 c65f456639a42c49e0cf69029a104e9ced8466e8 SHA1 0df64f98cf8bf76a88d043f73e0bb57e240c00b5 SHA256 8c4cd363d42190d192a3d5d5d59f9d689e8f7503e661b3bb57a896a3c0a2d565
-MISC ChangeLog 986 RMD160 cbdd10fde71f60ff41d21094f90918cc21333353 SHA1 eec3f962e99662c4001c3152e78a62a3623b1e36 SHA256 aa9fcbf745b42d501daf55f87d1762e2512e20796f3d4ceeb3b56ddb9b52e88c
+EBUILD actdiag-0.2.0.ebuild 989 RMD160 b0324855f5d17153c488153a52cb18b9f55e79ac SHA1 1d5b6de6d962e882fd258f0dcc27e152688c685e SHA256 bad7ad3d0d1d5352abb88247e8515f00dd257918fa30b56bc28887867936bc79
+MISC ChangeLog 1107 RMD160 5591a25c37dfcd9c7ab798b29863a4cc42cb29ed SHA1 5a0d989b2a34a8183f506259a831261a3b7c4c78 SHA256 ff5e8e4479feff6105199cb58c1261c3775816a7b078e094ed6388df685a5db5
 MISC metadata.xml 737 RMD160 f1c314b74e22085a0a5adbce08b5c541d703fa9c SHA1 f9519f6fa70000becedd34c5e224da1ad8f94c52 SHA256 7c4e772f273ed190bdd741a7e94a576e7d4e284417409cd180e581c90a744199
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk6e0ZYACgkQzJrj3cAXR0nBDgCeOrOt0f1F8reFQpnN2u+v2jNS
-U8IAoIe3xV1iSb9fFD8RRbZBg+ik3Pqy
-=9MUc
+iEYEAREKAAYFAk6i4O8ACgkQzJrj3cAXR0lF4ACfZQ+UypHYp1LuZndKkUijfZvk
+d8MAn3x1U9OwufI+dsmhVfbVR7UpvbNp
+=AG3y
 -----END PGP SIGNATURE-----
