@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*actdiag-0.2.0 (22 Oct 2011)
+
+  22 Oct 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.2.0.ebuild:
+  Version bump [481].
+
 *actdiag-0.1.8 (19 Oct 2011)
 
   19 Oct 2011; James Rowe <jnrowe@gmail.com> +actdiag-0.1.8.ebuild:
